[gd_scene load_steps=58 format=3 uid="uid://btm0ei5fs0m10"]

[ext_resource type="Theme" uid="uid://oxc82qrj3ssc" path="res://Escenas/UI.tres" id="1_4vip0"]
[ext_resource type="Script" path="res://Escenas/Ordenes.gd" id="1_qy5sv"]
[ext_resource type="Script" path="res://Escenas/UI.gd" id="1_xq7xs"]
[ext_resource type="Script" path="res://Logica/UI/Lb_tiempo.gd" id="3_hwchs"]
[ext_resource type="Texture2D" uid="uid://nc0mqsf6b11t" path="res://Sprites/mejoras/reloj normal.png" id="4_1gerh"]
[ext_resource type="Script" path="res://Escenas/Lb_Dias.gd" id="4_go46m"]
[ext_resource type="AudioStream" uid="uid://c1hjjwipji7up" path="res://Musica/cliente_enojado.wav" id="4_h0j4i"]
[ext_resource type="AudioStream" uid="uid://bmj43p0weuvai" path="res://Musica/OrdenCorrecta2.wav" id="5_lmvn8"]
[ext_resource type="Script" path="res://Logica/UI/Lb_Dinero.gd" id="5_qljiu"]
[ext_resource type="Script" path="res://FinalizarDia/FinalizarDia.gd" id="6_6ps5f"]
[ext_resource type="AudioStream" uid="uid://dreskpl5ovjky" path="res://Musica/Horno.mp3" id="6_7b88a"]
[ext_resource type="Texture2D" uid="uid://dj3rn7e01llv3" path="res://Sprites/Recursos/MineralesCopia.png" id="7_bbwty"]
[ext_resource type="Script" path="res://Logica/UI/GridMinerales.gd" id="7_oym11"]
[ext_resource type="Texture2D" uid="uid://q25uhow5bfjg" path="res://Sprites/UI/moneda normal 27x27 px espaciado 2 px.png" id="7_q4w3t"]
[ext_resource type="Script" path="res://Escenas/VbReloj.gd" id="7_s2ivm"]
[ext_resource type="Theme" uid="uid://bftiuvq8fblb7" path="res://Sprites/Menu/label.tres" id="8_qhue7"]
[ext_resource type="Script" path="res://Escenas/Gameover.gd" id="12_1lmnk"]
[ext_resource type="Script" path="res://Escenas/Renta.gd" id="12_m1oro"]
[ext_resource type="AudioStream" uid="uid://cbw1ing6stfqh" path="res://Musica/Finalizar el dia bien.wav" id="14_bi36g"]
[ext_resource type="PackedScene" uid="uid://cgjgcfv42vp3u" path="res://Escenas/tutorial.tscn" id="14_uh3r7"]
[ext_resource type="AudioStream" uid="uid://b8swctfsbqhwi" path="res://Musica/Perder.wav" id="15_uh00d"]
[ext_resource type="Theme" uid="uid://cmi06nsvnqse7" path="res://Sprites/Menu/Uifondo.tres" id="16_cal8s"]
[ext_resource type="Theme" uid="uid://cgape0strpjef" path="res://Sprites/Menu/botonmorao.tres" id="17_1my18"]
[ext_resource type="PackedScene" uid="uid://bktgwkq7n141g" path="res://Logica/UI/h_box_name_and_day.tscn" id="18_pqh3v"]
[ext_resource type="Texture2D" uid="uid://ctj4obkn3i1bo" path="res://Sprites/UI/Icon_Next.png" id="19_i0nsn"]
[ext_resource type="Texture2D" uid="uid://bwfp6hyvatb5n" path="res://Sprites/Menu/UIbackground.png" id="20_v1ys7"]
[ext_resource type="Theme" uid="uid://pnhutxwsymll" path="res://Sprites/Menu/botoncuadraoamarillo.tres" id="26_46bwo"]
[ext_resource type="Script" path="res://Escenas/pausa.gd" id="26_mis2i"]
[ext_resource type="Texture2D" uid="uid://j200rhck5hbf" path="res://Sprites/UI/casita.png" id="28_crjft"]
[ext_resource type="Texture2D" uid="uid://b23cd5xtolx3k" path="res://Sprites/UI/Icon_SoundOn.png" id="28_jiou3"]
[ext_resource type="Texture2D" uid="uid://dwie0v2x8teph" path="res://Sprites/UI/plei.png" id="30_axupe"]

[sub_resource type="LabelSettings" id="LabelSettings_g6ud2"]
font_size = 15
font_color = Color(1, 0.168627, 0.168627, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.376471)

[sub_resource type="AtlasTexture" id="AtlasTexture_18s7n"]
atlas = ExtResource("7_q4w3t")
region = Rect2(2, 2, 27, 27)

[sub_resource type="Animation" id="Animation_615qf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(2, 2, 27, 27)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fq5il"]
resource_name = "newmoney"
length = 0.850005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(2, 2, 27, 27), Rect2(31, 2, 27, 27), Rect2(60, 2, 27, 27), Rect2(89, 2, 27, 27), Rect2(118, 2, 27, 27), Rect2(89, 2, 27, 27), Rect2(60, 2, 27, 27), Rect2(31, 2, 27, 27), Rect2(2, 2, 27, 27)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yjgmp"]
_data = {
"RESET": SubResource("Animation_615qf"),
"newmoney": SubResource("Animation_fq5il")
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xoam7"]
load_path = "res://.godot/imported/MineralesCopia.png-04f67ba30884ec0463e8c250e9928851.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_2qnci"]
atlas = SubResource("CompressedTexture2D_xoam7")
region = Rect2(4, 4, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpmjl"]
atlas = ExtResource("7_bbwty")
region = Rect2(13, 4, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ed7w"]
atlas = ExtResource("7_bbwty")
region = Rect2(22, 4, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t2b6"]
atlas = ExtResource("7_bbwty")
region = Rect2(31, 4, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaldj"]
atlas = ExtResource("7_bbwty")
region = Rect2(40, 4, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1fxj"]
atlas = ExtResource("7_bbwty")
region = Rect2(49, 4, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf2ym"]
atlas = ExtResource("7_bbwty")
region = Rect2(4, 13, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cuot"]
atlas = ExtResource("7_bbwty")
region = Rect2(13, 13, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip7uw"]
atlas = ExtResource("7_bbwty")
region = Rect2(22, 13, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qif5"]
atlas = ExtResource("7_bbwty")
region = Rect2(31, 13, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_udvxe"]
atlas = ExtResource("7_bbwty")
region = Rect2(58, 4, 8, 8)

[sub_resource type="Theme" id="Theme_cya63"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5qqux"]
texture = ExtResource("20_v1ys7")
expand_margin_left = 50.0
expand_margin_top = 70.0
expand_margin_right = 50.0
expand_margin_bottom = 70.0

[sub_resource type="LabelSettings" id="LabelSettings_yrvle"]
line_spacing = 12.0
font_size = 36
font_color = Color(0.95, 0.19, 0.19, 1)
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6e4pu"]
line_spacing = 12.0
font_size = 22
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_b1onc"]
line_spacing = 12.0
font_size = 18
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3nvl1"]
line_spacing = 12.0
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s01y6"]
bg_color = Color(0.764706, 0.713726, 0.396078, 1)
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ldqa"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.643137, 0.380392, 0.239216, 1)
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="Theme" id="Theme_mqkdm"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_4vip0")
script = ExtResource("1_xq7xs")
metadata/_edit_lock_ = true

[node name="Ordenes" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 715.0
offset_top = 83.0
offset_right = 932.0
offset_bottom = 647.0
theme_override_constants/separation = 90
script = ExtResource("1_qy5sv")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Ordenes"]
stream = ExtResource("4_h0j4i")
pitch_scale = 0.99

[node name="AudioEntregarOrden" type="AudioStreamPlayer" parent="Ordenes"]
stream = ExtResource("5_lmvn8")
volume_db = -6.5
pitch_scale = 0.99

[node name="AudioOrdenIncorrecta" type="AudioStreamPlayer" parent="Ordenes"]
stream = ExtResource("6_7b88a")
pitch_scale = 0.6

[node name="VbReloj" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0.843137)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -70.0
offset_right = 177.0
offset_bottom = -20.0
grow_vertical = 0
alignment = 1
script = ExtResource("7_s2ivm")

[node name="HbReloj" type="HBoxContainer" parent="VbReloj"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VbReloj/HbReloj"]
layout_mode = 2
alignment = 1

[node name="Lb_tiempo" type="Label" parent="VbReloj/HbReloj/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("8_qhue7")
text = "8:00 AM"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_hwchs")

[node name="Lb_Dias" type="Label" parent="VbReloj/HbReloj/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("8_qhue7")
text = "Dia: 1"
vertical_alignment = 1
justification_flags = 171
uppercase = true
script = ExtResource("4_go46m")

[node name="TextureReloj" type="TextureRect" parent="VbReloj/HbReloj"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_1gerh")
stretch_mode = 2

[node name="Renta" type="Label" parent="."]
layout_mode = 2
offset_left = 816.0
offset_top = 625.0
offset_right = 948.0
offset_bottom = 639.0
text = "Renta: "
label_settings = SubResource("LabelSettings_g6ud2")
script = ExtResource("12_m1oro")

[node name="VbDinero" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0.843137)
layout_mode = 0
offset_left = 820.0
offset_top = 650.0
offset_right = 938.0
offset_bottom = 698.0
alignment = 1

[node name="HbDinero" type="HBoxContainer" parent="VbDinero"]
layout_mode = 2
theme = ExtResource("8_qhue7")
theme_override_constants/separation = 8

[node name="TextureDinero" type="TextureRect" parent="VbDinero/HbDinero"]
texture_filter = 1
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_18s7n")
expand_mode = 1
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="VbDinero/HbDinero/TextureDinero"]
libraries = {
"": SubResource("AnimationLibrary_yjgmp")
}

[node name="Lb_Dinero" type="Label" parent="VbDinero/HbDinero"]
unique_name_in_owner = true
layout_mode = 2
text = "005"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_qljiu")

[node name="GridMinerales" type="GridContainer" parent="."]
modulate = Color(1, 1, 1, 0.780392)
layout_mode = 0
offset_left = 20.0
offset_top = 15.0
offset_right = 272.0
offset_bottom = 127.0
theme = ExtResource("8_qhue7")
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 8
columns = 8
script = ExtResource("7_oym11")

[node name="TextureRect" type="TextureRect" parent="GridMinerales"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_2qnci")

[node name="Label" type="Label" parent="GridMinerales"]
layout_mode = 2
text = ":0"
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="GridMinerales"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_xpmjl")

[node name="Label2" type="Label" parent="GridMinerales"]
layout_mode = 2
text = ":0"
vertical_alignment = 1

[node name="TextureRect3" type="TextureRect" parent="GridMinerales"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_5ed7w")

[node name="Label3" type="Label" parent="GridMinerales"]
visible = false
layout_mode = 2
text = ":0"
vertical_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="GridMinerales"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_0t2b6")

[node name="Label4" type="Label" parent="GridMinerales"]
layout_mode = 2
text = ":0"
vertical_alignment = 1

[node name="TextureRect5" type="TextureRect" parent="GridMinerales"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_yaldj")

[node name="Label5" type="Label" parent="GridMinerales"]
visible = false
layout_mode = 2
text = ":0"
vertical_alignment = 1

[node name="TextureRect6" type="TextureRect" parent="GridMinerales"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_x1fxj")

[node name="Label6" type="Label" parent="GridMinerales"]
visible = false
layout_mode = 2
text = ":0"
vertical_alignment = 1

[node name="TextureRect8" type="TextureRect" parent="GridMinerales"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_wf2ym")

[node name="Label8" type="Label" parent="GridMinerales"]
visible = false
layout_mode = 2
text = ":0"
vertical_alignment = 1

[node name="TextureRect9" type="TextureRect" parent="GridMinerales"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_3cuot")

[node name="Label9" type="Label" parent="GridMinerales"]
visible = false
layout_mode = 2
text = ":0"
vertical_alignment = 1

[node name="TextureRect10" type="TextureRect" parent="GridMinerales"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_ip7uw")

[node name="Label10" type="Label" parent="GridMinerales"]
visible = false
layout_mode = 2
text = ":0"
vertical_alignment = 1

[node name="TextureRect11" type="TextureRect" parent="GridMinerales"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_3qif5")

[node name="Label11" type="Label" parent="GridMinerales"]
visible = false
layout_mode = 2
text = ":0"
vertical_alignment = 1

[node name="TextureRect7" type="TextureRect" parent="GridMinerales"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_udvxe")

[node name="Label7" type="Label" parent="GridMinerales"]
visible = false
layout_mode = 2
text = ":0"
vertical_alignment = 1

[node name="Tutorial" parent="." instance=ExtResource("14_uh3r7")]
offset_left = 112.0
offset_top = 136.0

[node name="FinalizarDia" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.151
anchor_top = 0.18
anchor_right = 0.849
anchor_bottom = 0.82
offset_left = -13.96
offset_top = -45.6
offset_right = 43.96
offset_bottom = 11.6
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("16_cal8s")
script = ExtResource("6_6ps5f")

[node name="VBoxContainer" type="VBoxContainer" parent="FinalizarDia"]
layout_mode = 2
theme = SubResource("Theme_cya63")
theme_override_constants/separation = 32
alignment = 1

[node name="HbMejoras" type="HBoxContainer" parent="FinalizarDia/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="FinalizarDia/VBoxContainer"]
layout_mode = 2

[node name="Btn_finalizar_dia" type="Button" parent="FinalizarDia/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(320, 64)
layout_mode = 2
theme = ExtResource("17_1my18")
theme_override_font_sizes/font_size = 25
text = "NEXT_DAY"

[node name="AudioFinDiaBien" type="AudioStreamPlayer" parent="FinalizarDia"]
stream = ExtResource("14_bi36g")
volume_db = -5.0
pitch_scale = 1.01

[node name="Gameover" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.136111
anchor_right = 0.920833
anchor_bottom = 0.838889
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("16_cal8s")
theme_override_styles/panel = SubResource("StyleBoxTexture_5qqux")
script = ExtResource("12_1lmnk")
metadata/_edit_use_anchors_ = true

[node name="AudioGameover" type="AudioStreamPlayer" parent="Gameover"]
stream = ExtResource("15_uh00d")
volume_db = -11.0
pitch_scale = 0.99

[node name="VBoxContainer" type="VBoxContainer" parent="Gameover"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="Gameover/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 3.0
text = "BANKRUPTCY"
label_settings = SubResource("LabelSettings_yrvle")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Gameover/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "TOP_PLAYERS"
label_settings = SubResource("LabelSettings_6e4pu")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="Gameover/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
theme_override_constants/separation = 18

[node name="HBoxContainer" type="HBoxContainer" parent="Gameover/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
alignment = 1

[node name="Label3" type="Label" parent="Gameover/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "RANK"
label_settings = SubResource("LabelSettings_b1onc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="Gameover/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TOP_PLAYER_NAME"
label_settings = SubResource("LabelSettings_b1onc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="Gameover/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "DAY"
label_settings = SubResource("LabelSettings_b1onc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainerTopPlayers" type="VBoxContainer" parent="Gameover/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LineEditSelfContainer" type="HBoxContainer" parent="Gameover/VBoxContainer/VBoxContainer/VBoxContainerTopPlayers"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="LbSelfPos" type="Label" parent="Gameover/VBoxContainer/VBoxContainer/VBoxContainerTopPlayers/LineEditSelfContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "x."
label_settings = SubResource("LabelSettings_3nvl1")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Gameover/VBoxContainer/VBoxContainer/VBoxContainerTopPlayers/LineEditSelfContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/caret_width = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_s01y6")
theme_override_styles/focus = SubResource("StyleBoxFlat_2ldqa")
placeholder_text = "YOUR_NAME"
alignment = 1
max_length = 10
expand_to_text_length = true
caret_blink = true
caret_mid_grapheme = true

[node name="LbSelfDia" type="Label" parent="Gameover/VBoxContainer/VBoxContainer/VBoxContainerTopPlayers/LineEditSelfContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Dia 5"
label_settings = SubResource("LabelSettings_3nvl1")
horizontal_alignment = 1
uppercase = true

[node name="HBoxNameAndDay1" parent="Gameover/VBoxContainer/VBoxContainer/VBoxContainerTopPlayers" instance=ExtResource("18_pqh3v")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxNameAndDay2" parent="Gameover/VBoxContainer/VBoxContainer/VBoxContainerTopPlayers" instance=ExtResource("18_pqh3v")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxNameAndDay3" parent="Gameover/VBoxContainer/VBoxContainer/VBoxContainerTopPlayers" instance=ExtResource("18_pqh3v")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxNameAndDay4" parent="Gameover/VBoxContainer/VBoxContainer/VBoxContainerTopPlayers" instance=ExtResource("18_pqh3v")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxNameAndDay5" parent="Gameover/VBoxContainer/VBoxContainer/VBoxContainerTopPlayers" instance=ExtResource("18_pqh3v")]
unique_name_in_owner = true
layout_mode = 2

[node name="Btn_reintentar" type="Button" parent="Gameover/VBoxContainer"]
custom_minimum_size = Vector2(260, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 2.0
theme = ExtResource("17_1my18")
theme_override_font_sizes/font_size = 20
text = "RETRY"

[node name="Pausa" type="PanelContainer" parent="."]
process_mode = 3
visible = false
layout_mode = 0
offset_left = 163.0
offset_top = 112.0
offset_right = 821.0
offset_bottom = 561.0
theme = ExtResource("16_cal8s")

[node name="VBoxContainer" type="VBoxContainer" parent="Pausa"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="MarginContainer2" type="MarginContainer" parent="Pausa/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Label" type="Label" parent="Pausa/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme = ExtResource("8_qhue7")
theme_override_font_sizes/font_size = 40
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Pausa/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = SubResource("Theme_mqkdm")
theme_override_constants/margin_top = 120

[node name="HBoxContainer" type="HBoxContainer" parent="Pausa/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1
script = ExtResource("26_mis2i")

[node name="Btn_toggle_sound" type="Button" parent="Pausa/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 2
theme = ExtResource("26_46bwo")
icon = ExtResource("28_jiou3")
icon_alignment = 1
expand_icon = true

[node name="Btn_HOME" type="Button" parent="Pausa/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 2
theme = ExtResource("26_46bwo")
icon = ExtResource("28_crjft")
icon_alignment = 1
expand_icon = true

[node name="Btn_BACK" type="Button" parent="Pausa/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 2
theme = ExtResource("26_46bwo")
icon = ExtResource("30_axupe")
icon_alignment = 1
expand_icon = true

[node name="Btn_pause" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 901.0
offset_top = 14.0
offset_right = 951.0
offset_bottom = 77.0
focus_mode = 0
flat = true

[node name="Sprite2D" type="Sprite2D" parent="Btn_pause"]
process_mode = 3
modulate = Color(1, 1, 1, 0.811765)
position = Vector2(21.95, 26.8)
scale = Vector2(0.39703, 0.284783)
texture = ExtResource("19_i0nsn")

[connection signal="delegar_orden" from="." to="Ordenes" method="entregarOrden"]
[connection signal="pressed" from="FinalizarDia/VBoxContainer/CenterContainer/Btn_finalizar_dia" to="FinalizarDia" method="_on_btn_finalizar_dia_pressed"]
[connection signal="text_changed" from="Gameover/VBoxContainer/VBoxContainer/VBoxContainerTopPlayers/LineEditSelfContainer/LineEdit" to="Gameover" method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Gameover/VBoxContainer/Btn_reintentar" to="Gameover" method="_on_btn_reintentar_pressed"]
[connection signal="pressed" from="Pausa/VBoxContainer/MarginContainer/HBoxContainer/Btn_toggle_sound" to="Pausa/VBoxContainer/MarginContainer/HBoxContainer" method="_on_btn_toggle_sound_pressed"]
[connection signal="pressed" from="Pausa/VBoxContainer/MarginContainer/HBoxContainer/Btn_HOME" to="Pausa/VBoxContainer/MarginContainer/HBoxContainer" method="_on_btn_home_pressed"]
[connection signal="pressed" from="Pausa/VBoxContainer/MarginContainer/HBoxContainer/Btn_BACK" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="Btn_pause" to="." method="_on_btn_pause_pressed"]
